--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="repoModel"
-            type="com.moataz.githubsearch.data.Item" />
+            type="com.moataz.githubsearch.data.model.Item" />
     </data>
 
     <androidx.cardview.widget.CardView
