--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -80,7 +80,7 @@
                 android:layout_height="@dimen/_20sdp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/ic_star"
+                android:src="@drawable/ic_baseline_star_rate_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
