--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,35 +20,35 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
         android:src="@drawable/ic_github"
-        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/github_text"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/github_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/aleo"
         android:text="@string/github_search"
         android:textColor="#ffffff"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/logo_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.61"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/logo_image" />
 
     <SearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
@@ -56,7 +56,7 @@
         android:paddingStart="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/github_text"
         app:queryHint="@string/app_name" />
 
     <ImageView
@@ -75,10 +75,9 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:overScrollMode="never"
-        android:visibility="gone"
-        android:paddingBottom="16dp"
         android:paddingTop="@dimen/_12sdp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/load_more_progress_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -95,43 +94,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
+    <ProgressBar
+        android:id="@+id/load_more_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminateTint="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
-        android:id="@+id/search_start"
-        android:layout_width="223dp"
-        android:layout_height="268dp"
+        android:id="@+id/main_image"
+        android:layout_width="207dp"
+        android:layout_height="236dp"
         android:src="@drawable/ic_start_search"
-        app:layout_constraintBottom_toTopOf="@+id/textViecw"
+        app:layout_constraintBottom_toTopOf="@+id/welcome_search_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:layout_constraintVertical_bias="0.61" />
 
     <TextView
-        android:id="@+id/textViecw"
+        android:id="@+id/welcome_search_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/aleo"
-        android:text="Search for your favourite repos"
+        android:text="@string/search_for_your_favourite_repos"
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/search_start"
-        app:layout_constraintStart_toStartOf="@+id/search_start"
+        app:layout_constraintEnd_toEndOf="@+id/main_image"
+        app:layout_constraintStart_toStartOf="@+id/main_image"
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:layout_constraintVertical_bias="0.65999997" />
 
     <TextView
-        android:id="@+id/error_text"
+        android:id="@+id/error_search_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/aleo"
-        android:text="No repos found, try something else"
+        android:text="@string/no_repos_found_try_something_else"
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/search_start"
-        app:layout_constraintStart_toStartOf="@+id/search_start"
+        app:layout_constraintEnd_toEndOf="@+id/main_image"
+        app:layout_constraintStart_toStartOf="@+id/main_image"
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:layout_constraintVertical_bias="0.65999997" />
 </androidx.constraintlayout.widget.ConstraintLayout>
