--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
         android:overScrollMode="never"
         android:paddingTop="@dimen/_12sdp"
         android:paddingBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/load_more_progress_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -112,7 +112,6 @@
         android:text="@string/search_for_your_favourite_repos"
         android:textColor="#ffffff"
         android:textSize="20sp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/main_image"
         app:layout_constraintStart_toStartOf="@+id/main_image"
