finish app before send to master

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.GithubSearch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.GithubSearch" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryVariant">@color/color_primary</item>
@@ -9,5 +9,11 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/color_primary</item>
+    </style>
+
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:textColor">#A8FFFFFF</item>
+        <item name="android:editTextColor">#A8FFFFFF</item>
+        <item name="android:textColorHint">#A8FFFFFF</item>
     </style>
 </resources>
