--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/aleo"
-        android:text="@string/github_search"
+        android:text="@string/app_name"
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/logo_image"
@@ -53,11 +53,21 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:background="@color/color_primary"
+        android:iconifiedByDefault="false"
+        android:inputType="text"
         android:paddingStart="35dp"
+        app:theme="@style/SearchViewStyle"
+        android:queryBackground="@android:color/transparent"
+        android:queryHint="@string/github_search"
+        android:searchIcon="@null"
+        android:singleLine="true"
+        android:textColor="@color/design_default_color_on_secondary"
+        android:textSize="@dimen/_12ssp"
+        app:defaultQueryHint="@string/github_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/github_text"
-        app:queryHint="@string/app_name" />
+        tools:ignore="RtlSymmetry" />
 
     <ImageView
         android:id="@+id/search_icon"
