--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.GithubSearch" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.GithubSearch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryVariant">@color/color_primary</item>
@@ -12,8 +12,8 @@
     </style>
 
     <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
-        <item name="android:textColor">#A8FFFFFF</item>
-        <item name="android:editTextColor">#A8FFFFFF</item>
-        <item name="android:textColorHint">#A8FFFFFF</item>
+        <item name="android:textColor">@color/white_transparent</item>
+        <item name="android:editTextColor">@color/white_transparent</item>
+        <item name="android:textColorHint">@color/white_transparent</item>
     </style>
 </resources>
