--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -26,16 +26,16 @@
 
             <TextView
                 android:id="@+id/repo_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="100dp"
+                android:layout_marginEnd="120dp"
                 android:fontFamily="@font/aleo"
                 android:text="@{repoModel.full_name}"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_14ssp"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
